[package]
name = "aei_tag_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "3.2.16", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

[[bin]]
name = "aei-tag-parser"
path = "src/main.rs"