[package]
name = "aei_tag_parser"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/tbornon/aei-tag-parser"
homepage = "https://github.com/tbornon/aei-tag-parser"
documentation = "https://docs.rs/aei_tag_parser/latest/aei_tag_parser"
description = "A simple tool and library to parse AEI RFID tags"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "3.2.16", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

[[bin]]
name = "aei-tag-parser"
path = "src/main.rs"